Update 6/15 오전 수업 코드

--- a/Python/python_pandas.ipynb
+++ b/Python/python_pandas.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2001,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2336,7 +2336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3084,7 +3084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3094,12 +3094,12 @@
       "    name  age    birthday\n",
       "0  Hello   18  1920/09/28\n",
       "1  Happy   31  1910/03/26\n",
-      "2    Cat   33  2020/03/26\n"
+      "2    cat   33  2020/03/26\n"
      ]
     }
    ],
    "source": [
-    "info={\"name\":[\"Hello\",\"Happy\",\"Cat\"],\n",
+    "info={\"name\":[\"Hello\",\"Happy\",\"cat\"],\n",
     "      \"age\":[18,31, 33],\n",
     "      \"birthday\":['1920/09/28','1910/03/26','2020/03/26']}\n",
     "df = pd.DataFrame(info)\n",
@@ -3182,6 +3182,540 @@
     "print('5. contains\\n', x, sep='')\n",
     "x = df['name'].str.contains('a|e')\n",
     "print('5. contains\\n', x, sep='')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6/15(목)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Series의 str 처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    Happy\n",
+      "2      Cat\n",
+      "Name: name, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실습: name 컬럼에서 a 포함된 값 출력\n",
+    "x = df.loc[df['name'].str.contains('a'), 'name']\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6. startswith('H'):\n",
+      "0     True\n",
+      "1     True\n",
+      "2    False\n",
+      "Name: name, dtype: bool\n",
+      "7. islower:\n",
+      "0    False\n",
+      "1    False\n",
+      "2     True\n",
+      "Name: name, dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = df['name'].str.startswith('H')\n",
+    "print(\"6. startswith('H'):\\n\", x, sep='')\n",
+    "x = df['name'].str.islower()\n",
+    "print(\"7. islower:\\n\", x, sep='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Bird  Cat  Dog\n",
+      "0     0    1    0\n",
+      "1     0    0    1\n",
+      "2     1    0    0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## One-Hot encoding\n",
+    "pets = pd.Series(['Cat', 'Dog', 'Bird'])\n",
+    "print(pets.str.get_dummies()) # pd.get_dummies(pets)도 동일 결과"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 날짜 데이터 처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-06-25 00:00:00 <class 'pandas._libs.tslibs.timestamps.Timestamp'>\n",
+      "2023-06-25 00:00:00 <class 'pandas._libs.tslibs.timestamps.Timestamp'>\n",
+      "2023-06-25 00:00:00 <class 'pandas._libs.tslibs.timestamps.Timestamp'>\n",
+      "2023-06-25 00:00:00 <class 'pandas._libs.tslibs.timestamps.Timestamp'>\n",
+      "2023-06-25 00:00:00 <class 'pandas._libs.tslibs.timestamps.Timestamp'>\n",
+      "2023-06-25 12:24:45 <class 'pandas._libs.tslibs.timestamps.Timestamp'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. str -> datetime\n",
+    "x = pd.to_datetime('2023/6/25')\n",
+    "print(x, type(x))\n",
+    "x = pd.to_datetime('2023-6-25')\n",
+    "print(x, type(x))\n",
+    "x = pd.to_datetime('2023 6 25')\n",
+    "print(x, type(x))\n",
+    "x = pd.to_datetime('2023:06:25', format='%Y:%m:%d')\n",
+    "print(x, type(x))\n",
+    "x = pd.to_datetime('2023년06월25일', format='%Y년%m월%d일')\n",
+    "print(x, type(x))\n",
+    "x = pd.to_datetime('2023년06월25일 12:24:45', format='%Y년%m월%d일 %H:%M:%S')\n",
+    "print(x, type(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "151 days 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 날짜 연산\n",
+    "xxx = pd.to_datetime('2023/6/15')\n",
+    "xxx2 = pd.to_datetime('2023/1/15')\n",
+    "print(xxx - xxx2) # 차이를 일수로 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date_range(freq=D):\n",
+      "DatetimeIndex(['2023-01-01', '2023-01-02', '2023-01-03', '2023-01-04',\n",
+      "               '2023-01-05', '2023-01-06', '2023-01-07', '2023-01-08',\n",
+      "               '2023-01-09', '2023-01-10',\n",
+      "               ...\n",
+      "               '2023-05-23', '2023-05-24', '2023-05-25', '2023-05-26',\n",
+      "               '2023-05-27', '2023-05-28', '2023-05-29', '2023-05-30',\n",
+      "               '2023-05-31', '2023-06-01'],\n",
+      "              dtype='datetime64[ns]', length=152, freq='D')\n",
+      "\n",
+      "date_range(freq=M):\n",
+      "DatetimeIndex(['2023-01-31', '2023-03-31', '2023-05-31'], dtype='datetime64[ns]', freq='2M')\n",
+      "\n",
+      "date_range(freq=2M):\n",
+      "DatetimeIndex(['2023-01-31', '2023-03-31', '2023-05-31'], dtype='datetime64[ns]', freq='2M')\n",
+      "\n",
+      "date_range(freq=Y):\n",
+      "DatetimeIndex(['2023-12-31', '2024-12-31', '2025-12-31', '2026-12-31',\n",
+      "               '2027-12-31', '2028-12-31', '2029-12-31'],\n",
+      "              dtype='datetime64[ns]', freq='A-DEC')\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. datetime을 지정된 범위에서 반환\n",
+    "# 1) start, end 명시\n",
+    "x = pd.date_range('2023/1/1', '2023/6/1')\n",
+    "print('date_range(freq=\"D\"):\\n', x, '\\n', sep='')\n",
+    "x = pd.date_range('2023/1/1', '2023/6/1', freq='2M')\n",
+    "print('date_range(freq=\"M\"):\\n', x, '\\n', sep='')\n",
+    "x = pd.date_range('2023/1/1', '2023/6/1', freq='2M')\n",
+    "print('date_range(freq=\"2M\"):\\n', x, '\\n', sep='')\n",
+    "x = pd.date_range('2023/1/1', '2030/6/1', freq='Y')\n",
+    "print('date_range(freq=\"Y\"):\\n', x, '\\n', sep='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date_range(preiods=5):\n",
+      "DatetimeIndex(['2023-01-01', '2023-01-02', '2023-01-03', '2023-01-04',\n",
+      "               '2023-01-05'],\n",
+      "              dtype='datetime64[ns]', freq='D')\n",
+      "\n",
+      "date_range(preiods=5, freq=\"M\"):\n",
+      "DatetimeIndex(['2023-01-31', '2023-02-28', '2023-03-31', '2023-04-30',\n",
+      "               '2023-05-31'],\n",
+      "              dtype='datetime64[ns]', freq='M')\n",
+      "\n",
+      "date_range(preiods=5, freq=\"Y\"):\n",
+      "DatetimeIndex(['2023-12-31', '2024-12-31', '2025-12-31', '2026-12-31',\n",
+      "               '2027-12-31'],\n",
+      "              dtype='datetime64[ns]', freq='A-DEC')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2) start, periods 명시\n",
+    "x = pd.date_range('2023/1/1', periods=5)\n",
+    "print('date_range(preiods=5):\\n', x, '\\n', sep='')\n",
+    "x = pd.date_range('2023/1/1', periods=5, freq='M')\n",
+    "print('date_range(preiods=5, freq=\"M\"):\\n', x, '\\n', sep='')\n",
+    "x = pd.date_range('2023/1/1', periods=5, freq='Y')\n",
+    "print('date_range(preiods=5, freq=\"Y\"):\\n', x, sep='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            시작가격    종가\n",
+      "2023-12-31   500  1500\n",
+      "2024-12-31   200  1200\n",
+      "2025-12-31    50   150\n",
+      "2026-12-31   240  1240\n",
+      "2027-12-31   455  1455\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 활용\n",
+    "x = pd.date_range('2023/1/1', periods=5, freq='A-DEC')\n",
+    "df = pd.DataFrame({'시작가격':[500, 200, 50, 240, 455], '종가':[1500, 1200, 150, 1240, 1455]}, index=x)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   Name        Born        Died  Age          Occupation\n",
+      "0     Rosaline Franklin  1920-07-25  1958-04-16   37             Chemist\n",
+      "1        William Gosset  1876-06-13  1937-10-16   61        Statistician\n",
+      "2  Florence Nightingale  1820-05-12  1910-08-13   90               Nurse\n",
+      "3           Marie Curie  1867-11-07  1934-07-04   66             Chemist\n",
+      "4         Rachel Carson  1907-05-27  1964-04-14   56           Biologist\n",
+      "5             John Snow  1813-03-15  1858-06-16   45           Physician\n",
+      "6           Alan Turing  1912-06-23  1954-06-07   41  Computer Scientist\n",
+      "7          Johann Gauss  1777-04-30  1855-02-23   77       Mathematician\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('./data/scientists.csv')\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본:\n",
+      "0    1920-07-25\n",
+      "1    1876-06-13\n",
+      "2    1820-05-12\n",
+      "3    1867-11-07\n",
+      "4    1907-05-27\n",
+      "5    1813-03-15\n",
+      "6    1912-06-23\n",
+      "7    1777-04-30\n",
+      "Name: Born, dtype: object\n",
+      "타입 변경:\n",
+      "0   1920-07-25\n",
+      "1   1876-06-13\n",
+      "2   1820-05-12\n",
+      "3   1867-11-07\n",
+      "4   1907-05-27\n",
+      "5   1813-03-15\n",
+      "6   1912-06-23\n",
+      "7   1777-04-30\n",
+      "Name: Born, dtype: datetime64[ns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "born = df['Born']\n",
+    "print('원본:\\n', born, sep='') # 문자열이므로 연산 불가\n",
+    "born = pd.to_datetime(born)\n",
+    "print('타입 변경:\\n', born, sep='')\n",
+    "died = pd.to_datetime(df['Died'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   Name        Born        Died  Age          Occupation   \n",
+      "0     Rosaline Franklin  1920-07-25  1958-04-16   37             Chemist  \\\n",
+      "1        William Gosset  1876-06-13  1937-10-16   61        Statistician   \n",
+      "2  Florence Nightingale  1820-05-12  1910-08-13   90               Nurse   \n",
+      "3           Marie Curie  1867-11-07  1934-07-04   66             Chemist   \n",
+      "4         Rachel Carson  1907-05-27  1964-04-14   56           Biologist   \n",
+      "5             John Snow  1813-03-15  1858-06-16   45           Physician   \n",
+      "6           Alan Turing  1912-06-23  1954-06-07   41  Computer Scientist   \n",
+      "7          Johann Gauss  1777-04-30  1855-02-23   77       Mathematician   \n",
+      "\n",
+      "          생애  \n",
+      "0 13779 days  \n",
+      "1 22404 days  \n",
+      "2 32964 days  \n",
+      "3 24345 days  \n",
+      "4 20777 days  \n",
+      "5 16529 days  \n",
+      "6 15324 days  \n",
+      "7 28422 days  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df['생애(일)'] = died - born\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column    Non-Null Count  Dtype         \n",
+      "---  ------    --------------  -----         \n",
+      " 0   cur_date  5 non-null      datetime64[ns]\n",
+      "dtypes: datetime64[ns](1)\n",
+      "memory usage: 172.0 bytes\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. series.dt\n",
+    "x = pd.date_range('2023/1/1', periods=5)\n",
+    "df = pd.DataFrame({'cur_date':x})\n",
+    "print(df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "년도:\n",
+      "0    2023\n",
+      "1    2023\n",
+      "2    2023\n",
+      "3    2023\n",
+      "4    2023\n",
+      "Name: cur_date, dtype: int32\n",
+      "월:\n",
+      "0    1\n",
+      "1    1\n",
+      "2    1\n",
+      "3    1\n",
+      "4    1\n",
+      "Name: cur_date, dtype: int32\n",
+      "일:\n",
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "Name: cur_date, dtype: int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('년도:\\n', df['cur_date'].dt.year, sep='')\n",
+    "print('월:\\n', df['cur_date'].dt.month, sep='')\n",
+    "print('일:\\n', df['cur_date'].dt.day, sep='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0   2023-01-01\n",
+      "1   2023-01-02\n",
+      "2   2023-01-03\n",
+      "3   2023-01-04\n",
+      "4   2023-01-05\n",
+      "Name: cur_date, dtype: datetime64[ns] 0    2023-01-01\n",
+      "1    2023-01-02\n",
+      "2    2023-01-03\n",
+      "3    2023-01-04\n",
+      "4    2023-01-05\n",
+      "Name: cur_date, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. datetime -> str 변경\n",
+    "print(df['cur_date'], df['cur_date'].astype(str))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataFrame 병합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본\n",
+      "   x1  x2\n",
+      "0  A   1\n",
+      "1  B   2\n",
+      "2  C   3 \n",
+      "   x1 x3  x4\n",
+      "0  A  T  T1\n",
+      "1  B  F  F1\n",
+      "2  D  T  T1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1) 공통컬럼\n",
+    "df1 = pd.DataFrame({\"x1\":['A','B','C'],\n",
+    "                    \"x2\":[1, 2, 3]})\n",
+    "\n",
+    "df2 = pd.DataFrame({\"x1\":['A','B','D'],\n",
+    "                    \"x3\":['T','F','T'],\n",
+    "                    \"x4\":['T1','F1','T1']})\n",
+    "print('원본\\n', df1, '\\n', df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  x1  x2 x3  x4\n",
+      "0  A   1  T  T1\n",
+      "1  B   2  F  F1\n",
+      "  x1  x2 x3\n",
+      "0  A   1  T\n",
+      "1  B   2  F\n",
+      "  x1  x2 x3 _merge\n",
+      "0  A   1  T   both\n",
+      "1  B   2  F   both\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_df = pd.merge(df1, df2, on='x1', how='inner') # on=scala|list 가능\n",
+    "print(new_df)\n",
+    "new_df = pd.merge(df1, df2[['x1', 'x3']], on='x1', how='inner') # fancy 색인을 이용해 해당 컬럼만 합칠 수 있다.\n",
+    "print(new_df)\n",
+    "new_df = pd.merge(df1, df2[['x1', 'x3']], on='x1', how='inner', indicator=True) # 병합 정보 반환\n",
+    "print(new_df)"
    ]
   },
   {
