Update 6/16 빅데이터분석기사 실기 공부

--- a/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 2. 유튜브 공범컨텐츠 동영상 데이터.ipynb
+++ b/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 2. 유튜브 공범컨텐츠 동영상 데이터.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "726d0634",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b9492277",
    "metadata": {},
    "outputs": [
@@ -576,11 +576,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "267c8fe6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>videopk</th>\n",
+       "      <th>viewcnt</th>\n",
+       "      <th>likecnt</th>\n",
+       "      <th>dislikecnt</th>\n",
+       "      <th>favoritecnt</th>\n",
+       "      <th>cmcnt</th>\n",
+       "      <th>ct</th>\n",
+       "      <th>videoname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>720</th>\n",
+       "      <td>c5JQp6xafqc</td>\n",
+       "      <td>2153676</td>\n",
+       "      <td>34104</td>\n",
+       "      <td>830</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7120</td>\n",
+       "      <td>2021-10-12 19:20:03</td>\n",
+       "      <td>공범 EP1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>721</th>\n",
+       "      <td>c5JQp6xafqc</td>\n",
+       "      <td>2228250</td>\n",
+       "      <td>34559</td>\n",
+       "      <td>849</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7191</td>\n",
+       "      <td>2021-10-13 09:41:37</td>\n",
+       "      <td>공범 EP1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>722</th>\n",
+       "      <td>c5JQp6xafqc</td>\n",
+       "      <td>2228250</td>\n",
+       "      <td>34559</td>\n",
+       "      <td>849</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7191</td>\n",
+       "      <td>2021-10-13 09:41:37</td>\n",
+       "      <td>공범 EP1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>723</th>\n",
+       "      <td>c5JQp6xafqc</td>\n",
+       "      <td>2228669</td>\n",
+       "      <td>34566</td>\n",
+       "      <td>849</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7194</td>\n",
+       "      <td>2021-10-13 09:50:03</td>\n",
+       "      <td>공범 EP1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1635</th>\n",
+       "      <td>c5JQp6xafqc</td>\n",
+       "      <td>2706691</td>\n",
+       "      <td>37893</td>\n",
+       "      <td>987</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7410</td>\n",
+       "      <td>2021-10-19 17:50:02</td>\n",
+       "      <td>공범 EP1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1636</th>\n",
+       "      <td>c5JQp6xafqc</td>\n",
+       "      <td>2707933</td>\n",
+       "      <td>37901</td>\n",
+       "      <td>988</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7410</td>\n",
+       "      <td>2021-10-19 18:20:03</td>\n",
+       "      <td>공범 EP1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1637</th>\n",
+       "      <td>c5JQp6xafqc</td>\n",
+       "      <td>2708448</td>\n",
+       "      <td>37903</td>\n",
+       "      <td>988</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7410</td>\n",
+       "      <td>2021-10-19 18:30:03</td>\n",
+       "      <td>공범 EP1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          videopk  viewcnt  likecnt  dislikecnt  favoritecnt  cmcnt   \n",
+       "720   c5JQp6xafqc  2153676    34104         830            0   7120  \\\n",
+       "721   c5JQp6xafqc  2228250    34559         849            0   7191   \n",
+       "722   c5JQp6xafqc  2228250    34559         849            0   7191   \n",
+       "723   c5JQp6xafqc  2228669    34566         849            0   7194   \n",
+       "1635  c5JQp6xafqc  2706691    37893         987            0   7410   \n",
+       "1636  c5JQp6xafqc  2707933    37901         988            0   7410   \n",
+       "1637  c5JQp6xafqc  2708448    37903         988            0   7410   \n",
+       "\n",
+       "                      ct videoname  \n",
+       "720  2021-10-12 19:20:03    공범 EP1  \n",
+       "721  2021-10-13 09:41:37    공범 EP1  \n",
+       "722  2021-10-13 09:41:37    공범 EP1  \n",
+       "723  2021-10-13 09:50:03    공범 EP1  \n",
+       "1635 2021-10-19 17:50:02    공범 EP1  \n",
+       "1636 2021-10-19 18:20:03    공범 EP1  \n",
+       "1637 2021-10-19 18:30:03    공범 EP1  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 다시 보기\n",
+    "import datetime\n",
+    "\n",
+    "ep_one = video.loc[video.videoname.str.contains('1')].sort_values('ct').reset_index(drop=True)\n",
+    "\n",
+    "ep_one[\n",
+    "        (ep_one.ct.diff(1) >=datetime.timedelta(minutes=20)) | \\\n",
+    "        (ep_one.ct.diff(1) <=datetime.timedelta(minutes=5))\n",
+    "      \n",
+    "      ]\n",
+    "\n",
+    "answer = ep_one[ep_one.index.isin([720,721,722,723,1635,1636,1637])]\n",
+    "display(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -593,11 +744,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "9c9ae8d2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               ct videoname\n",
+      "10     2021-10-07    공범 EP1\n",
+      "3496   2021-10-09    공범 EP2\n",
+      "6696   2021-10-14    공범 EP3\n",
+      "9264   2021-10-16    공범 EP4\n",
+      "11544  2021-10-21    공범 EP5\n",
+      "13661  2021-10-23    공범 EP6\n",
+      "13106  2021-10-28    공범 EP7\n",
+      "14935  2021-10-30    공범 EP8\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = video.sort_values(by=['videoname', 'ct'], inplace=False)\n",
+    "time = df['ct'].dt.strftime('%Y-%m-%d')\n",
+    "new_df = pd.concat([time, df['videoname']], axis=1)\n",
+    "answer = new_df.drop_duplicates('videoname', keep='first')\n",
+    "print(answer)\n"
+   ]
   },
   {
    "attachments": {},
@@ -610,11 +783,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ffa11b7d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  videoname  viewcnt                  ct\n",
+      "0    공범 EP8   264029 2021-10-30 21:00:08\n",
+      "1    공범 EP7   252032 2021-10-28 21:00:04\n",
+      "2    공범 EP4   217674 2021-10-16 21:00:04\n",
+      "3    공범 EP6   213899 2021-10-23 21:00:06\n",
+      "4    공범 EP5   201179 2021-10-21 21:00:04\n",
+      "5    공범 EP2   148144 2021-10-09 21:00:03\n",
+      "6    공범 EP3   147183 2021-10-14 21:00:04\n",
+      "7    공범 EP1   117340 2021-10-07 21:00:03\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = video.loc[video['ct'].dt.hour==21].sort_values(by=['videoname', 'ct']).drop_duplicates(['videoname'], keep='first')\n",
+    "answer = df[['videoname', 'viewcnt', 'ct']].sort_values(by='viewcnt', ascending=False).reset_index(drop=True)\n",
+    "print(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -627,11 +820,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "99e71e8f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  videoname     ratio\n",
+      "0    공범 EP7  0.013636\n",
+      "1    공범 EP6  0.015881\n",
+      "2    공범 EP4  0.017971\n",
+      "3    공범 EP5  0.021128\n",
+      "4    공범 EP3  0.022360\n",
+      "5    공범 EP1  0.027118\n",
+      "6    공범 EP2  0.029844\n",
+      "7    공범 EP8  0.141357\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = video.sort_values(by=['ct', 'videoname']).drop_duplicates('videoname', keep='last')\n",
+    "df['ratio'] = df['dislikecnt'] / df['likecnt']\n",
+    "answer = df[['videoname', 'ratio']].sort_values(by='ratio').reset_index(drop=True)\n",
+    "print(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -644,11 +858,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "5fd40564",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           viewcnt\n",
+      "videoname         \n",
+      " 공범 EP1      13298\n",
+      " 공범 EP2      10300\n",
+      " 공범 EP3       9927\n",
+      " 공범 EP4       9824\n",
+      " 공범 EP5      10824\n",
+      " 공범 EP7      26949\n",
+      " 공범 EP6      14141\n",
+      " 공범 EP8      89147\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hw981\\AppData\\Local\\Temp\\ipykernel_28128\\2624665084.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  new_df['viewcnt'] = last['viewcnt'] - first['viewcnt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = pd.to_datetime('2021-11-01 00:00:00')\n",
+    "end = pd.to_datetime('2021-11-01 15:00:00')\n",
+    "\n",
+    "df = video.loc[(video['ct'] >= start)&(video['ct'] <= end)]\n",
+    "first = df.drop_duplicates('videoname', keep='first').reset_index(drop=True)\n",
+    "last = df.drop_duplicates('videoname', keep='last').reset_index(drop=True)\n",
+    "new_df = first[['videoname']]\n",
+    "new_df['viewcnt'] = last['viewcnt'] - first['viewcnt']\n",
+    "new_df.set_index('videoname', inplace=True)\n",
+    "print(new_df)"
+   ]
   },
   {
    "attachments": {},
@@ -661,11 +915,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "0705cd84",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     videoname                  ct\n",
+      "722     공범 EP1 2021-10-13 09:41:37\n",
+      "3927    공범 EP2 2021-10-13 09:41:37\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = video.loc[video.duplicated(['videoname', 'ct']), ['videoname', 'ct']]\n",
+    "print(answer)"
+   ]
   },
   {
    "cell_type": "code",
