--- a/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 3. 월드컵 출전선수 골기록 데이터.ipynb
+++ b/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 3. 월드컵 출전선수 골기록 데이터.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4c3ebee0",
    "metadata": {},
@@ -103,6 +104,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "61a879ce",
    "metadata": {},
@@ -112,13 +114,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a717d561",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Goals</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Brazil</th>\n",
+       "      <td>228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Germany</th>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Argentina</th>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Italy</th>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>France</th>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Goals\n",
+       "Country         \n",
+       "Brazil       228\n",
+       "Germany      226\n",
+       "Argentina    135\n",
+       "Italy        123\n",
+       "France       115"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "answer = df.groupby('Country')['Goals'].sum().sort_values(ascending=False).to_frame()\n",
+    "display(answer.head())"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "05abcaae",
    "metadata": {},
@@ -128,13 +201,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3b155de7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country\n",
+      "Brazil       81\n",
+      "Germany      78\n",
+      "Italy        60\n",
+      "Argentina    59\n",
+      "France       58\n",
+      "Name: Goals, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df.groupby('Country')['Goals'].count().sort_values(ascending=False).head()\n",
+    "print(answer.head())"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "081a0e1d",
    "metadata": {},
@@ -144,13 +235,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0be87886",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['yearlst'] = df['Years'].str.split('-')\n",
+    "def check(x):\n",
+    "    for i in x:\n",
+    "        if len(i) != 4:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "df['check'] = df['yearlst'].apply(check)\n",
+    "\n",
+    "result = len(df.loc[df['check']==False])\n",
+    "print(result)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "24395cc7",
    "metadata": {},
@@ -167,6 +279,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "50875ab8",
    "metadata": {},
@@ -183,6 +296,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a91ca046",
    "metadata": {},
@@ -199,6 +313,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d9d22c6",
    "metadata": {},
@@ -215,6 +330,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "670b522e",
    "metadata": {},
@@ -231,6 +347,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "58dca457",
    "metadata": {},
@@ -247,6 +364,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "070423d3",
    "metadata": {},
@@ -279,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
